# GenReL-World

./: .gitattributes  README.md  grad_descent.py  ppo_actor.pth  ppo_critic.pth  ppo_meta_actor.pth  ppo_meta_actor_v2.pth  ppo_meta_actor_v3.pth  ppo_meta_actor_v4.pth  ppo_meta_actor_v5.pth  ppo_meta_actor_v6.pth  ppo_meta_actor_v7.pth  ppo_meta_actor_v8.pth  ppo_meta_critic.pth  ppo_meta_critic_v2.pth  ppo_meta_critic_v3.pth  ppo_meta_critic_v4.pth  ppo_meta_critic_v5.pth  ppo_meta_critic_v6.pth  ppo_meta_critic_v7.pth  ppo_meta_critic_v8.pth  pyproject.toml  testMetaW.py  testxArm7.py
PPO_gym/: main.py  network.py  ppo.py  requirements.txt
PPO_metaW/: main.py  network.py  ppo.py  requirements.txt  train_test.py
metaworld/envs/: reward_utils.py
metaworld/policies/: sawyer_pick_place_v2_policy.py
models/: DQN.py  PPO.py  PPOgym.py  PPOv2.py  RL2.py  actor_critic.py  actor_criticDQN.py
models/network/: GAE.py  actor_critic.py  actor_critic_linear.py
runs/Apr18_16-36-03_Hero.local/: events.out.tfevents.1713450963.Hero.local.12287.0
runs/Apr18_16-39-29_Hero.local/: events.out.tfevents.1713451169.Hero.local.12341.0
runs/Apr18_16-45-25_Hero.local/: events.out.tfevents.1713451525.Hero.local.12546.0
runs/Apr18_16-45-42_Hero.local/: events.out.tfevents.1713451542.Hero.local.12570.0
runs/Apr18_17-05-34_Hero.local/: events.out.tfevents.1713452734.Hero.local.13564.0
runs/Apr18_17-49-58_Hero.local/: events.out.tfevents.1713455398.Hero.local.14142.0
runs/Apr18_19-02-46_Hero.local/: events.out.tfevents.1713459766.Hero.local.14289.0
runs/Apr27_23-21-59_Hero.local/: events.out.tfevents.1714252919.Hero.local.73937.0
runs/Apr27_23-25-40_Hero.local/: events.out.tfevents.1714253140.Hero.local.74030.0
runs/Apr27_23-27-35_Hero.local/: events.out.tfevents.1714253255.Hero.local.74072.0
runs/Apr27_23-29-37_Hero.local/: events.out.tfevents.1714253377.Hero.local.74133.0
runs/Apr27_23-31-03_Hero.local/: events.out.tfevents.1714253463.Hero.local.74186.0
runs/Apr27_23-43-58_Hero.local/: events.out.tfevents.1714254238.Hero.local.74254.0
runs/Apr27_23-44-46_Hero.local/: events.out.tfevents.1714254286.Hero.local.74290.0
runs/Apr28_01-14-17_Hero.local/: events.out.tfevents.1714259657.Hero.local.75409.0
runs/Apr28_01-24-28_Hero.local/: events.out.tfevents.1714260268.Hero.local.75718.0
runs/Apr28_01-26-01_Hero.local/: events.out.tfevents.1714260361.Hero.local.75774.0
runs/Apr28_01-27-01_Hero.local/: events.out.tfevents.1714260421.Hero.local.75823.0
runs/Apr28_01-30-34_Hero.local/: events.out.tfevents.1714260634.Hero.local.75900.0
runs/Apr28_01-32-42_Hero.local/: events.out.tfevents.1714260762.Hero.local.75949.0
runs/Apr28_01-37-46_Hero.local/: events.out.tfevents.1714261066.Hero.local.76052.0
test/: testMetaW.py  testxArm7.py
test_env/: testxArm7.py
train/: garage_example.py  trainMetaW.py  trainMetaWDQN.py  trainMetaWPPO.py  trainRL2.py  train_garagePPO.py  train_garagePPOv2.py  train_torchrl.py  traingymPPO.py
utils/: metaworld_env_wrapper.py
wandb/: latest-run
(+656 files in other folders)
