[tool.poetry]
name = "GenRel-World"
version = "0.1.0"
description = "GenReL-World is a general Reinforcement Learning framework to utilize various world models as environments for robot manipulation"
readme = "README.md"
authors = ["Márk Czimber and Josh Kang <czimbermark@gmail.com>"]
license = "MIT"
keywords = ["Reinforcement Learning", "project-work", "RL", "AI", "mujoco", "robotics", "Meta_RL"]
classifiers = [
    "Development Status :: 1 - Planning",  # Change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
# Your main dependencies
python = ">=3.9,<3.13"
numpy = ">=1.18"
scipy = ">=1.4.1"
torch = "^2.2.0"
jax = "^0.4.26"
flax = "^0.8.2"
optax = "^0.2.2"
tensorflow = "^2.16.1"
metaworld = "^0.0.1.dev0"
imageio = "^2.34.0"
torchrl = { git = "https://github.com/pytorch/rl.git" }
akro = "^0.0.8"
click = "^8.1.7"
dowel = "^0.0.4"
psutil = "^5.9.8"
setproctitle = "^1.3.3"
ray = "^2.11.0"
cma = "^3.3.0"
tensorflow-probability = "^0.24.0"
keras = "^3.3.2"
tf-keras = "^2.16.0"
wandb = "^0.16.6"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
stable-baselines3 = "^2.3.2"
pyopengl = "^3.1.7"
gym = "^0.26.2"
pyglet = "^2.0.15"
mujoco = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"